--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=demotest2
+DB_USERNAME=demouser
+DB_PASSWORD=demo
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
